--- a/Form.html
+++ b/Form.html
@@ -41,6 +41,19 @@
 <div class="item">5</div>
 </div>
 
+<!-- Display Grid -->
+
+<div class="container1">
+<div class="item1">1</div>
+<div class="item1">2</div>
+<div class="item1">3</div>
+<div class="item1">4</div>
+<div class="item1">5</div>
+<div class="item1">6</div>
+<div class="item1">7</div>
+<div class="item1">8</div>
+<div class="item1">9</div>
+</div>
 
 </body>
 </html>
